# godot-haskell-template

./: CHANGELOG.md  LICENSE  README.md  cabal.project  godot-haskell-template.cabal
ffi/cbits/: flib.c
ffi/flib/: FLib.hs
game/: project.godot
src/: Lib.hs
