cabal-version:      2.4
name:               godot-haskell-template
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Winston Hartnett
maintainer:         winstonhartnett@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

build-type:         Simple

foreign-library mylib
  type:             native-shared
  other-modules:    FLib
  hs-source-dirs:   ffi/flib
  c-sources:        ffi/cbits/flib.c
  build-depends:
    , base             >=4.14 && <5
    , godot-haskell
    , godot-haskell-template
    , text

  default-language: Haskell2010

library
  exposed-modules:  Lib
  autogen-modules:  Paths_godot_haskell_template

  -- Modules included in this library but not exported.
  other-modules:    Paths_godot_haskell_template

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base           >=4.14 && <5
    , godot-haskell

  hs-source-dirs:   src game
  default-language: Haskell2010
